# korabli-mod-manager

./: .editorconfig  Cargo.toml  README.md
src/: app.rs  data.rs  download.rs  error.rs  install.rs  main.rs  messages.rs  mod_manager.rs  registry.rs  uninstall.rs
src/app/: update.rs
src/data/: progress.rs  registry.rs
src/tasks/: download.rs  install.rs  uninstall.rs
