[package]
name = "korabli-mod-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
async_zip = { version = "0.0.17", features = ["full"] }
chrono = "0.4.39"
font-kit = "0.14.2"
futures = "0.3.31"
hex = "0.4.3"
native-dialog = "0.7.0"
sanitize-filename = "0.6.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
temp-file = "0.1.9"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["io"] }
toml = "0.8.20"
tracing-subscriber = "0.3.19"
url = "2.5.4"

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
rev = "89a412695af321356a6f05f9111510d35a839983"
version = "0.14.0-dev"
features = ["tokio", "image"]

[dependencies.reqwest]
version = "0.12.12"
default-features = false
features = [
    "charset",
    "rustls-tls",
    "http2",
    "macos-system-configuration",
    "stream",
]

[features]
builtin-font = []
